# restaurant-client

./: .env  Cargo.toml  README.md
src/: config.rs  error.rs  gen.rs  lib.rs  main.rs  request.rs
tests/: test_requests.rs
